Your commit message here

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 		</dependency>-->
 
 		<!-- Lombok -->
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
