--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.jpa.show-sql=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 logging.level.org.springframework.security=DEBUG
+spring.redis.host=localhost
+spring.redis.port=6379
+
+
